--- a/display.html
+++ b/display.html
@@ -37,7 +37,7 @@
           <table id="movies">
             <thead>
               <tr>
-                <th><a href="#" data-col="original_title">Title</a></th>
+                <th><a href="#" data-col="title">Title</a></th>
                 <th><a href="#" data-col="release_date">Release Date</a></th>
                 <th><a href="#" data-col="vote_count">Votes</a></th>
               </tr>
