--- a/display.html
+++ b/display.html
@@ -8,6 +8,7 @@
 
     <title>iCapture - JDawson</title>
 
+    <link rel="icon" type="image/png" href="http://candidate-test.icapture.com/dawsonj/img/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
